--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,7 @@ import "../styles/Global.css";
   </head>
   <body>
     <BaseLayout />
+    <a href="/recipes">Recetas</a>
     <section class="index-container">
       <h3>Mil Recetas</h3>
       <ul>
