--- a/src/pages/recipes/[name].astro
+++ b/src/pages/recipes/[name].astro
@@ -4,7 +4,7 @@ import BaseLayout from "../../layouts/base-layout.astro";
 export async function getStaticPaths() {
 
   const data = await (
-    await fetch("https://www.themealdb.com/api/json/v1/1/search.php?f=b")
+    await fetch("https://www.themealdb.com/api/json/v1/1/search.php?f=h")
   ).json();
   
  
