--- a/src/pages/recipes/[name].astro
+++ b/src/pages/recipes/[name].astro
@@ -1,18 +1,14 @@
 ---
-import '../../styles/Global.css'
+import "../../styles/Global.css";
 import BaseLayout from "../../layouts/base-layout.astro";
 export async function getStaticPaths() {
-
   const data = await (
-    await fetch("https://www.themealdb.com/api/json/v1/1/search.php?f=h")
+    await fetch("https://www.themealdb.com/api/json/v1/1/search.php?f=s")
   ).json();
-  
- 
-  return data.meals.map((recipe) => {
 
-    
+  return data.meals.map((recipe) => {
     return {
-      params: { name: recipe.strMeal},
+      params: { name: recipe.strMeal },
       props: { recipe },
     };
   });
@@ -21,7 +17,90 @@ export async function getStaticPaths() {
 const { id } = Astro.params;
 const { recipe } = Astro.props;
 ---
-<BaseLayout />
-<h3>id: {id}</h3>
-<h1>{recipe.strMeal}</h1>
 
+<BaseLayout />
+<div class="title-container">
+  <h1>{recipe.strMeal}</h1>
+</div>
+<article class="recipe-container">
+  <img src={recipe.strMealThumb} alt="" />
+  <div class="ingredients-container">
+    <h2>ingredients</h2>
+    <ul>
+      <li>{recipe.strIngredient1  || '😉'} : <span>{recipe.strMeasure1 || '🛏'} </span></li>
+      <li>{recipe.strIngredient2 || '😉' } : <span>{recipe.strMeasure2 || '🛏'} </span></li>
+      <li>{recipe.strIngredient3 || '😉' } : <span>{recipe.strMeasure3 || '🛏'} </span></li>
+      <li>{recipe.strIngredient4 || '😉' } : <span>{recipe.strMeasure4 || '🛏'} </span></li>
+      <li>{recipe.strIngredient5 || '😉' } : <span>{recipe.strMeasure5 || '🛏'} </span></li>
+      <li>{recipe.strIngredient6 || '😉' } : <span>{recipe.strMeasure6 || '🛏'} </span></li>
+      <li>{recipe.strIngredient7 || '😉' } : <span>{recipe.strMeasure7 || '🛏'} </span></li>
+      <li>{recipe.strIngredient8 || '😉' } : <span>{recipe.strMeasure8 || '🛏'} </span></li>
+      <li>{recipe.strIngredient9 || '😉' } : <span>{recipe.strMeasure9 || '🛏'} </span></li>
+      <li>{recipe.strIngredient10 || '😉' } : <span>{recipe.strMeasure10 || '🛏'} </span></li>
+      <li>{recipe.strIngredient11 || '😉' } : <span>{recipe.strMeasure11 || '🛏'} </span></li>
+      <li>{recipe.strIngredient12 || '😉' } : <span>{recipe.strMeasure12 || '🛏'} </span></li>
+      <li>{recipe.strIngredient13 || '😉' } : <span>{recipe.strMeasure13 || '🛏'} </span></li>
+      <li>{recipe.strIngredient14 || '😉' } : <span>{recipe.strMeasure14 || '🛏'} </span></li>
+      <li>{recipe.strIngredient15 || '😉' } : <span>{recipe.strMeasure15 || '🛏'} </span></li>
+      <li>{recipe.strIngredient16 || '😉' } : <span>{recipe.strMeasure16 || '🛏'} </span></li>
+      <li>{recipe.strIngredient17 || '😉' } : <span>{recipe.strMeasure17 || '🛏'} </span></li>
+      <li>{recipe.strIngredient18 || '😉' } : <span>{recipe.strMeasure18 || '🛏'} </span></li>
+      <li>{recipe.strIngredient19 || '😉' } : <span>{recipe.strMeasure19 || '🛏'} </span></li>
+      <li>{recipe.strIngredient20 || '😉' } : <span>{recipe.strMeasure20 || '🛏'} </span></li>
+    </ul>
+  </div>
+  <h2 class="instructions-title">Instructions</h2>
+  <p>{recipe.strInstructions}</p>
+  <h2 class="instructions-title">Source</h2>
+</article>
+
+
+
+
+<style>
+
+  .title-container{
+    margin: 150px auto 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+  }
+  .recipe-container {
+    margin: 30px auto 0 auto;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+  .recipe-container img{
+    width: 100%;
+  }
+
+  .ingredients-container{
+    margin: 30px 0 0 0;
+  }
+  .ingredients-container ul{
+    margin: 30px 0 0 30px;
+  }
+  .ingredients-container ul li{
+    font-size: 1.2rem;
+  }
+  span{
+    margin: 0 0 0 5px;
+    color: rgb(76, 76, 76);
+    font-weight: bold;
+  }
+  p{
+    margin: 20px 0 0 0;
+    font-size: 1.3rem;
+  }
+  .instructions-title{
+    margin: 20px 0 0 0;
+  }
+
+@media(min-width:768px){
+  .recipe-container {
+    width: 70%;
+  }
+}
+</style>
