--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navigation from "../components/Navigation";
 import '@fontsource/anek-odia';
+import Footer from "../components/Footer";
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -12,6 +13,7 @@ import '@fontsource/anek-odia';
 <body>
     <slot/>
     <Navigation/>
+    <Footer />
 </body>
 </html>
 <style>
