--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import "../styles/Global.css";
   <body>
     <BaseLayout />
     <section class="index-container">
-      <h3>MisRecetas</h3>
+      <h1>MisRecetas</h1>
       <p>
         Prototipo de una aplicación de recetas, con información completa de
         ingredientes, proceso e incluso con un un video explicativo
@@ -51,5 +51,9 @@ import "../styles/Global.css";
     display: flex;
     text-decoration: none;
     color: rgba(255, 81, 0, 0.708);
+  }
+  p{
+    margin: 40px 0 40px 0;
+    font-size: 1.4rem;
   }
 </style>
