--- a/src/pages/recipes/index.astro
+++ b/src/pages/recipes/index.astro
@@ -35,6 +35,7 @@ const res = await (
     gap: 25px;
 
     max-width: 85%;
+    margin: 0 auto 60px auto;
     
   }
 
@@ -64,7 +65,7 @@ const res = await (
 
 .recipes-container {
     
-    max-width: 70%;
+    max-width: 55%;
     
   }
 
