--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 14vh;
-    background-color: rgba(255, 81, 0, 0.708);
+    height: 9vh;
+    background-color: rgb(255, 123, 62);
     position: fixed;
     width: 100%;
     top: 0;
